TheMightyDude (22 September 2012)
--------------------------------------
Fixed error in code where it filtered the POST Variables it was returning computer_upgrade insted of armor_upgrade.
Fixed Notice: Undefined variable: langvars in includes/db_kill_player.php on line 85 
Fixed Notice: Undefined variable: langvars in includes/db_kill_player.php on line 87

TheKabal (20 September 2012)
--------------------------------------
Replace variable re-assignment with filtering in port2

TheMightyDude (16 September 2012)
--------------------------------------
Fixed Parse error: syntax error, unexpected '.' in includes/ibank_consolidate2.php on line 102

TheKabal (15 September 2012)
--------------------------------------
Admin panel now accepts drop-in modules (create a valid php file in admin/, and it will appear as a choice in the admin menu)
Expanded news to include events for 100, 250, 500, and 1000 planets - thanks to Alex1981m @ http://forums.blacknova.net/viewtopic.php?f=15&t=479
Split admin into seperate files for each command/module
Translated all variables in admin
Merged l_team_ed & l_tdr_edit down to l_edit (now in the common section of language)
Added several variables (that are used in multiple files) into the common section of the language file
Removed comment about sector zero not being editable in preparation for moving Sol to sector one

TheMightyDude (15 September 2012)
--------------------------------------
Fixed PHP Notice: Undefined variable: level_factor in includes/calc_planet_torps.php on line 34
Fixed PHP Notice: Undefined variable: planetinfo in includes/planet_combat.php on multi lines.
Fixed PHP Notice: Undefined variable: l_planet_capture1 in includes/planet_combat.php on a couple of lines.
Fixed bug where you enter 1.2.3 as a repeat amount which resulted in using all your turns up.

TheMightyDude (11 September 2012)
--------------------------------------