@@ -1,3 +1,7 @@
+TheKabal (22 September 2012)
+--------------------------------------
+Template driven admin.php
+
 TheMightyDude (22 September 2012)
 --------------------------------------
 Fixed error in code where it filtered the POST Variables it was returning computer_upgrade insted of armor_upgrade.
